<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_main"
            android:icon="@drawable/ic_menu_main"
            android:title="@string/menu_main"/>
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_pid_transparent"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_search"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_power"
            android:icon="@drawable/ic_powersysytem"
            android:title="@string/menu_power"/>
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_menu_setting"
            android:title="@string/menu_setting"/>
    </group>
</menu>
