<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_main">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.experiment03.fragment.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_nav_home_to_nav_slideshow"
            app:destination="@id/nav_slideshow" />
    </fragment>
    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.experiment03.fragment.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_search" />
    <fragment
        android:id="@+id/nav_power"
        android:name="com.example.experiment03.fragment.power.PowerFragment"
        android:label="@string/menu_power"
        tools:layout="@layout/power"/>
    <fragment
        android:id="@+id/nav_main"
        android:label="@string/menu_main"
        android:name="com.example.experiment03.fragment.main.MainFragment"
        tools:layout="@layout/fragment_main">
        <action
            android:id="@+id/action_nav_main_to_nav_home2"
            app:destination="@id/nav_home" />
    </fragment>
    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.experiment03.fragment.settings.SettingsFragment"
        android:label="@string/menu_setting"
        tools:layout="@layout/fragment_settings"/>

</navigation>