<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/re_freshLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        tools:ignore="UselessParent"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="UselessParent"
                android:orientation="horizontal"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp">
                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    tools:ignore="UselessParent"
                    android:layout_marginTop="15dp">
                    <TextView
                        android:id="@+id/taskDetails_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/please_load"
                        android:textSize="20sp"
                        android:textColor="@color/task_title"/>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/taskDetails_title">
                        <TextView
                            android:id="@+id/taskDetails_show1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/please_load"
                            android:padding="5dp"
                            android:textSize="10sp"
                            android:textColor="@color/task_show"
                            android:background="@color/task_show_background"
                            tools:ignore="SmallSp" />
                        <TextView
                            android:id="@+id/taskDetails_show2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/please_load"
                            android:padding="5dp"
                            android:textSize="10sp"
                            android:layout_marginStart="10dp"
                            android:textColor="@color/task_show"
                            android:background="@color/task_show_background"
                            tools:ignore="SmallSp" />
                    </LinearLayout>
                </RelativeLayout>
                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/task_line"
                    android:layout_marginTop="15dp"/>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:layout_marginStart="5dp">
                    <TextView
                        android:id="@+id/taskDetails_money"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/NULL"
                        android:textColor="@color/task_money"/>
                </LinearLayout>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/task_line"
                android:layout_marginTop="20dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp">
                <TextView
                    android:id="@+id/taskDetails_CompletedNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/taskDetails_Id"
                    android:text="@string/NULL"/>
                <TextView
                    android:id="@+id/taskDetails_RemainingNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/taskDetails_Id"
                    android:text="@string/NULL"/>
                <TextView
                    android:id="@+id/taskDetails_taskId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/taskDetails_Id"
                    android:text="@string/NULL"/>
                <TextView
                    android:id="@+id/taskDetails_taskTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/taskDetails_Id"
                    android:text="@string/NULL"/>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/task_line" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="当前任务状态:"
                    android:textSize="20sp" />
                <TextView
                    android:id="@+id/taskDetails_taskState"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/NULL"
                    android:textSize="20sp"
                    android:textColor="@color/taskDetails_taskState"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="15dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp">
                <com.qintong.library.InsLoadingView
                    android:id="@+id/taskDetails_headPortrait"
                    android:layout_width="80dp"
                    android:layout_height="70dp"
                    android:src="@drawable/logo0_roung"/>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_gravity="center">
                    <TextView
                        android:id="@+id/taskDetails_PublisherNickname"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/please_load"
                        android:textColor="@color/task_title"
                        android:layout_gravity="center_vertical"/>
                    <TextView
                        android:id="@+id/taskDetails_PublisherId"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/please_load"
                        android:textColor="@color/task_title"
                        android:layout_gravity="center_vertical"/>
                </LinearLayout>

                <TextView
                    android:id="@+id/taskDetails_administrator"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:textColor="@color/task_show"
                    android:text="联系管理员"/>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="7dp"
                android:background="@color/task_line" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:gravity="center"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="任务详情"
                    android:textSize="30sp"
                    android:textColor="@color/task_title"/>
                <TextView
                    android:id="@+id/taskDetails_Notice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/please_load"
                    android:layout_marginVertical="10dp"
                    android:gravity="center"
                    android:textColor="@color/app_color_red"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="1"
                            android:paddingHorizontal="7dp"
                            android:textSize="20sp"
                            android:background="@drawable/textview_cirle_background"/>
                            <View
                                android:layout_width="1dp"
                                android:layout_height="match_parent"
                                android:background="@color/task_line"
                                android:layout_gravity="center"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_gravity="center"
                        android:layout_marginStart="10dp">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="任务说明"
                            android:textSize="20sp"/>
                        <TextView
                            android:id="@+id/taskDetails_step1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/please_load"
                            android:textSize="14sp"/>
                        <ImageButton
                            android:id="@+id/taskDetails_step1Image"
                            android:layout_width="80dp"
                            android:layout_height="100dp"
                            android:src="@drawable/a"
                            android:scaleType="centerCrop"/>
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="2"
                            android:paddingHorizontal="7dp"
                            android:textSize="20sp"
                            android:background="@drawable/textview_cirle_background"/>
                        <View
                            android:layout_width="1dp"
                            android:layout_height="match_parent"
                            android:background="@color/task_line"
                            android:layout_gravity="center"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_gravity="center"
                        android:layout_marginStart="10dp">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="提交任务"
                            android:textSize="20sp"/>
                        <TextView
                            android:id="@+id/taskDetails_step2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/please_load"
                            android:textSize="14sp"/>
                        <ImageButton
                            android:id="@+id/taskDetails_step2Image"
                            android:layout_width="80dp"
                            android:layout_height="100dp"
                            android:src="@drawable/b"
                            android:scaleType="centerCrop"/>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
            <Button
                android:id="@+id/taskDetails_CollectTask"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ButtonState0"
                android:padding="15dp"
                android:background="@color/taskDetails_button"/>
        </LinearLayout>

    </ScrollView>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</LinearLayout>